--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -7,6 +7,7 @@
   --vt-c-black: #181818;
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
+  --ui-white-transparent: rgba(255, 255, 255, .6);
 }
 
 /* semantic color variables for this project */
@@ -14,14 +15,8 @@
   --color-background: var(--vt-c-white);
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
-  }
+  --color-transparent: var(--ui-white-transparent);
+  --color-text: var(--vt-c-black-mute);
 }
 
 *,
