--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,16 +5,20 @@
   font-weight: normal;
 }
 
-a,
 .green {
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
 }
 
+a {
+  color: #00c4eba4;
+  
+}
+
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    color: #00c3eb;
   }
 }
 
