--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -3,15 +3,17 @@
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #e8e8e8;
   --vt-c-white-mute: #f2f2f2;
+  --ui-white-transparent: rgba(255, 255, 255, .6);
 
   --vt-c-black: #181818;
   --vt-c-black-soft: #212121;
   --vt-c-black-mute: #282828;
-  --ui-white-transparent: rgba(255, 255, 255, .6);
+  --ui-black-transparent: rgba(26, 26, 26, .6);
 
   --ui-box-shadow: -8px -4px 8px 0 #ffffff, 8px 4px 12px 0 #d1d9e6,
   4px 4px 4px 0 #d1d9e6 inset, -4px -4px 4px 0 #ffffff inset;
   --ui-box-shadow2: -8px -4px 8px 0 #ffffff, 8px 4px 12px 0 #d1d9e6;
+  --ui-box-shadow3: 4px 4px 4px 0 #d1d9e6 inset, -4px -4px 4px 0 #ffffff inset;
   --ui-el-background: #ecf0f3;
 }
 
@@ -22,6 +24,20 @@
   --color-background-mute: var(--vt-c-white-mute);
   --color-transparent: var(--ui-white-transparent);
   --color-text: var(--vt-c-black-mute);
+}
+
+html.dark {
+  --color-background: var(--vt-c-black);
+  --color-background-soft: var(--vt-c-black-soft);
+  --color-background-mute: var(--vt-c-black-mute);
+  --color-transparent: var(--ui-black-transparent);
+  --color-text: var(--vt-c-white-mute);
+
+  --ui-box-shadow: -8px -4px 8px 0 #141414, 8px 4px 12px 0 #323334,
+  4px 4px 4px 0 #2c2e31 inset, -4px -4px 4px 0 #000000 inset;
+  --ui-box-shadow2: -8px -4px 8px 0 #101010, 8px 4px 12px 0 #323334;
+  --ui-box-shadow3: 4px 4px 4px 0 #2c2e31 inset, -4px -4px 4px 0 #000000 inset;
+  --ui-el-background: #19191a;
 }
 
 *,
